2011-09-23  Miklos Szeredi <miklos@szeredi.hu>

	* Replace daemon() function with fork().  Patch by Anatol Pomozov

2011-08-26  Miklos Szeredi <miklos@szeredi.hu>

	* If configured with --disable-mtab then don't call mount(8) from
	libfuse to update the mtab.  Reported by: James Sierp

2011-08-24  Miklos Szeredi <miklos@szeredi.hu>

	* Use LRU list for cleaning up the cache if the "remember=T"
	option was given.  Patch by therealneworld@gmail.com

2011-07-06  Miklos Szeredi <miklos@szeredi.hu>

	* Add ->flock() operation to low and high level interfaces.  This
	fixes problems with emulating flock() with POSIX locking.
	Reported by Sebastian Pipping.  As with lock/setlk/getlk most
	filesystems don't need to implement this, as the kernel takes care
	of file locking.  The only reason to implement locking operations
	is for network filesystems which want file locking to work between
	clients.

2011-07-02  Sebastian Pipping <sebastian@pipping.org>

	* Make xmp_utimens of examples "fusexmp" and "fusexmp_fh"
	not follow symlinks as other layers do that already.

2011-06-02  Miklos Szeredi <miklos@szeredi.hu>

	* Add "remember" option.  This works similar to "noforget" except
	that eventually the node will be allowed to expire from the cache.
	Patch by therealneworld@gmail.com

2011-05-27  Miklos Szeredi <miklos@szeredi.hu>

	* Check if splice/vmsplice are supported

2011-05-26  Miklos Szeredi <miklos@szeredi.hu>

	* Remove -lrt -ldl from fuse.pc for dynamic linking since
	libfuse.so is already linked with these libraries.  Reported by:
	Nikolaus Rath

2011-05-20  Miklos Szeredi <miklos@szeredi.hu>

	* Cleaner build output.  Patch by Reuben Hawkins

2011-05-19  Miklos Szeredi <miklos@szeredi.hu>

	* Disable splice by default, add "splice_read", "splice_write" and
	"splice_move" options.  Keep the "no_splice_*" variants, which can
	disable splice even if the filesystem explicitly enables it.

2011-04-15  Max Krasnyansky <maxk@kernel.org>